fix: changed file loading to work with java 8